--- a/style.css
+++ b/style.css
@@ -31,6 +31,14 @@ input
     height: 200px;
 }
 
+.content
+{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    margin-top: 1rem;
+}
+
 .card form
 {
     display: flex;
@@ -50,11 +58,54 @@ input
     background-color: #3a8ae2;
 }
 
+.btn-view
+{
+    display: flex;
+}
+
+.btn1
+{
+    background-color: #1e568f;
+    padding: 0.5rem;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.btn2
+{
+    background-color: #1e568f;
+    padding: 0.5rem;
+}
+
+.btn3
+{
+    background-color: #1e568f;
+    padding: 0.5rem;
+    border-radius: 0px 5px 5px 0px;
+}
+
+.btn1:hover
+{
+    cursor: pointer;
+    background-color: #3a8ae2;
+}
+
+.btn2:hover
+{
+    cursor: pointer;
+    background-color: #3a8ae2;
+}
+
+.btn3:hover
+{
+    cursor: pointer;
+    background-color: #3a8ae2;
+}
+
 .display
 {
     background-color: #1f2a48;
     border-radius: 5px;
-    padding: 1rem 3rem 3rem 1rem;    
+    padding: 1rem 1rem 1rem 1rem;    
 }
 
 .name
