--- a/style.css
+++ b/style.css
@@ -5,10 +5,25 @@ body
     color: white;
 }
 
+.header
+{
+    background-color: #1f2a48;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: white;
+}
+
 ul
 {
     list-style-type: none;
     display: flex;
+}
+
+li
+{
+    font-size: 20px;
 }
 
 input
@@ -105,7 +120,45 @@ input
 {
     background-color: #1f2a48;
     border-radius: 5px;
-    padding: 1rem 1rem 1rem 1rem;    
+    padding: 1rem 1rem 1rem 1rem; 
+    display: none;
+}
+
+.posts
+{
+    background-color: #1f2a48;
+    border-radius: 5px;
+    padding: 1rem 1rem 1rem 1rem;
+    display: none;
+    max-width: 90%;
+}
+
+.albums
+{
+    background-color: #1f2a48;
+    border-radius: 5px;
+    padding: 1rem 1rem 1rem 1rem;
+    display: none;
+    max-width: 90%;
+}
+
+.todos
+{
+    background-color: #1f2a48;
+    border-radius: 5px;
+    padding: 1rem 1rem 1rem 1rem;
+    display: none;
+    max-width: 90%;
+}
+
+.title
+{
+    font-size:20px;
+}
+
+.postBody
+{
+    display: none;
 }
 
 .name
